# agent_fleet

./: .env.example  .gitignore  CLAUDE.md  CONCEPT.md  ESTIMATION.md  INTERNAL_ARCHITECTURE.md  README.md  environments.example.yaml  pyproject.toml  test_sdk.py
data/: languages.json  phrases.json  roles.json
deploy/: Dockerfile
deploy/dev/: Dockerfile  compose.yaml  deploy.sh
deploy/prod/: compose.yaml
src/base_protocols/: __init__.py  create.py  delete.py  get_all.py  read.py  update.py
src/bounded_context/agent_control/protocols/: i_project_lock_manager.py
src/bounded_context/agent_control/services/: agent_session_manager.py  project_lock_manager.py
src/bounded_context/claude_service/entities/: __init__.py  job.py  session.py
src/bounded_context/claude_service/migrations/: runner.py
src/bounded_context/claude_service/repos/: __init__.py  job_repo.py  session_repo.py
src/bounded_context/project_management/entities/: project.py
src/bounded_context/project_management/repos/: project_repo.py
src/bounded_context/task_execution/entities/: execution_session.py  task.py  task_status.py
src/bounded_context/task_execution/protocols/: i_agent_session_manager.py  i_task_system_adapter.py
src/flows/ask_flow/: __init__.py  factory.py
src/flows/ask_flow/handlers/: ask_command_handler.py  execute_plan_handler.py  prompt_cancel_handler.py  prompt_confirm_handler.py  text_message_handler.py  user_answer_handler.py
src/flows/ask_flow/presenters/: ask_user_question_presenter.py  confirmation_presenter.py  execution_progress_presenter.py  plan_ready_presenter.py
src/flows/ask_flow/protocols/: __init__.py  i_pending_prompt_storage.py  i_session_storage.py
src/flows/ask_flow/repos/: __init__.py  redis_job_session_storage.py  (+2 more)
src/flows/execution_control_flow/: __init__.py  factory.py
src/flows/project_selection_flow/: __init__.py  factory.py
src/flows/welcome_flow/: __init__.py  welcome_menu_sender.py
src/messaging/: __init__.py  connection.py  consumer.py  publisher.py
src/messaging/messages/: __init__.py  claude_request.py  claude_response.py  stop_request.py
src/shared/: __init__.py
src/shared/protocols/: __init__.py  i_message_for_replace_storage.py
src/shared/repos/: __init__.py  redis_message_for_replace_storage.py
workers/bot/: __main__.py  repo_collection.py
workers/bot/consumers/: __init__.py  claude_response_consumer.py
workers/bot_consumer/: __main__.py
workers/claude_service/: __main__.py  request_consumer.py  stop_consumer.py
(+15 files in other folders)
